@@ -428,6 +428,8 @@
 : <a class="el" href="group__orx_config.html#g2e4004560e7f01598757abd390b89220">orxConfig.h</a>
 <li>orxConfig_SetFloat()
 : <a class="el" href="group__orx_config.html#ge177467bb1383c1f442f77107a6858d6">orxConfig.h</a>
+<li>orxConfig_SetParent()
+: <a class="el" href="group__orx_config.html#g896fbb4078e19b04136589050f27488d">orxConfig.h</a>
 <li>orxConfig_SetS32()
 : <a class="el" href="group__orx_config.html#g63e87a86f8f9228bfd43f549fe8d0fcc">orxConfig.h</a>
 <li>orxConfig_SetString()
@@ -1223,7 +1225,7 @@
 <li>orxPlugin_AddCoreInfo()
 : <a class="el" href="group__orx_plugin.html#gc2d80ed85322ebf239a94637e627fbef">orxPluginCore.h</a>
 <li>orxPLUGIN_DECLARE_CORE_REGISTER_FUNCTION()
-: <a class="el" href="group__orx_plugin.html#g2521b0142525880ca5a22a2f6d88cd7a">orxPlugin_CoreDefine.h</a>
+: <a class="el" href="group__orx_plugin.html#g4d0f770b1a20af917b0a07c4708f6cfc">orxPlugin_CoreDefine.h</a>
 <li>orxPlugin_DefaultCoreFunction()
 : <a class="el" href="group__orx_plugin.html#g9533c138e64ba45a78b4f50fb819a919">orxPluginCore.h</a>
 <li>orxPlugin_Exit()
